[gd_scene load_steps=18 format=3 uid="uid://cu440emlhve1m"]

[ext_resource type="Script" path="res://FPSController/PlayerScript.gd" id="1_rticr"]
[ext_resource type="Script" path="res://FPSController/Commands.gd" id="2_acwsa"]
[ext_resource type="Script" path="res://FPSController/PlayerRecoil/Recoil.gd" id="2_hmiop"]
[ext_resource type="Script" path="res://FPSController/PlayerSync.gd" id="6_rhaos"]
[ext_resource type="PackedScene" uid="uid://de8sgghqvldw3" path="res://InventorySystem/InventoryPanel.tscn" id="7_6u7fq"]
[ext_resource type="Texture2D" uid="uid://cfcxmt02700jh" path="res://Assets/HUD/Touchscreen/click.png" id="8_cdimw"]
[ext_resource type="Texture2D" uid="uid://cyi13u6n3j6a3" path="res://Assets/HUD/Touchscreen/inventory.png" id="9_qeqd0"]
[ext_resource type="Script" path="res://Scripts/UI/TouchUIClick.gd" id="9_v1a12"]
[ext_resource type="Texture2D" uid="uid://bdw5mkmw3k4md" path="res://Assets/HUD/Touchscreen/rclick.png" id="10_xrjm7"]
[ext_resource type="Script" path="res://FPSController/TouchBar.gd" id="11_0i2tu"]
[ext_resource type="Texture2D" uid="uid://bh0rnei2u64on" path="res://Assets/HUD/Touchscreen/back.png" id="14_v8nct"]

[sub_resource type="PlaneMesh" id="PlaneMesh_3c6ve"]
flip_faces = true
orientation = 2

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.371158
height = 2.64793

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6h10r"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:player_name")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:can_move")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:current_health")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath("PlayerHead:rotation")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="Animation" id="Animation_i7x7w"]
resource_name = "Walk"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"FootstepAnimate"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uiy40"]
_data = {
"Walk": SubResource("Animation_i7x7w")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5dgv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Player" type="CharacterBody3D" groups=["Players"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_rticr")

[node name="Commands" type="Node" parent="."]
script = ExtResource("2_acwsa")

[node name="PlayerModel" type="Node3D" parent="."]

[node name="PlayerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968611, -0.292869)

[node name="PlayerRecoil" type="Node3D" parent="PlayerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.968611, 0.292869)
script = ExtResource("2_hmiop")

[node name="PlayerCamera" type="Camera3D" parent="PlayerHead/PlayerRecoil"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.96861, -0.159767)
cull_mask = 524287

[node name="AddYourOwnShader" type="MeshInstance3D" parent="PlayerHead/PlayerRecoil/PlayerCamera"]
visible = false
extra_cull_margin = 4096.0
mesh = SubResource("PlaneMesh_3c6ve")

[node name="VisionRadius" type="RayCast3D" parent="PlayerHead/PlayerRecoil"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968611, -0.292869)
target_position = Vector3(0, 0, -128)
collision_mask = 31

[node name="RayCast3D" type="RayCast3D" parent="PlayerHead/PlayerRecoil"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968611, -0.292869)
target_position = Vector3(0, 0, -4)
collision_mask = 31

[node name="PlayerHand" type="Marker3D" parent="PlayerHead/PlayerRecoil"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968611, -0.961648)

[node name="ItemSpawn" type="Marker3D" parent="PlayerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.197413, -0.0797351)

[node name="CollisionBodyCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0386829, 0)
shape = SubResource("1")

[node name="WalkSounds" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.951681, 0)
max_distance = 12.0
bus = &"Sound"

[node name="InteractSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.783644, 0)
max_distance = 2.3
bus = &"Sound"

[node name="PlayerSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6h10r")
script = ExtResource("6_rhaos")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uiy40")
}

[node name="InventoryUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Inventory" parent="InventoryUI" instance=ExtResource("7_6u7fq")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.507
anchor_bottom = 0.507
offset_top = -539.56
offset_bottom = 540.44
grow_horizontal = 2
max_items_outside_inventory = 4

[node name="TouchUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Notice" type="Label" parent="TouchUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_right = 472.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Please, add joystick for touch UI"
autowrap_mode = 3

[node name="Inventory" type="TextureButton" parent="TouchUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.296
anchor_right = 0.1
anchor_bottom = 0.296
offset_left = -64.0
offset_top = -63.68
offset_right = 64.0
offset_bottom = 64.32
texture_normal = ExtResource("9_qeqd0")
texture_pressed = ExtResource("9_qeqd0")
texture_hover = ExtResource("9_qeqd0")
texture_focused = ExtResource("9_qeqd0")
script = ExtResource("9_v1a12")

[node name="Click" type="TextureButton" parent="TouchUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.63
anchor_right = 0.133
anchor_bottom = 0.63
offset_left = -63.36
offset_top = -64.4001
offset_right = 64.64
offset_bottom = 63.5999
grow_vertical = 2
texture_normal = ExtResource("8_cdimw")
texture_pressed = ExtResource("8_cdimw")
texture_hover = ExtResource("8_cdimw")
texture_focused = ExtResource("8_cdimw")
script = ExtResource("9_v1a12")

[node name="Rclick" type="TextureButton" parent="TouchUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.054
anchor_top = 0.63
anchor_right = 0.054
anchor_bottom = 0.63
offset_left = -63.68
offset_top = -64.4001
offset_right = 64.32
offset_bottom = 63.5999
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("10_xrjm7")
texture_pressed = ExtResource("10_xrjm7")
texture_hover = ExtResource("10_xrjm7")
texture_focused = ExtResource("10_xrjm7")
script = ExtResource("9_v1a12")

[node name="TouchBar" type="Panel" parent="TouchUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1536.0
offset_top = -540.0
offset_bottom = 548.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5dgv")
script = ExtResource("11_0i2tu")

[node name="Exit" type="TextureButton" parent="TouchUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0
texture_normal = ExtResource("14_v8nct")
texture_pressed = ExtResource("14_v8nct")
texture_hover = ExtResource("14_v8nct")
texture_focused = ExtResource("14_v8nct")

[connection signal="pressed" from="TouchUI/Click" to="TouchUI/Click" method="_on_pressed"]
[connection signal="pressed" from="TouchUI/Rclick" to="TouchUI/Rclick" method="_on_rclick_pressed"]
[connection signal="gui_input" from="TouchUI/TouchBar" to="TouchUI/TouchBar" method="_on_gui_input"]
